# desktop-playground

./: .eslintignore  .eslintrc.json  .gitignore  .prettierignore  README.md  package.json  pnpm-lock.yaml  setup.md
.claude/: settings.json  settings.local.json
apps/electron-client/: electron.vite.config.ts  package.json
apps/electron-client/src/main/: index.ts
apps/electron-client/src/preload/: index.ts
apps/electron-client/src/renderer/: index.html
apps/electron-client/src/renderer/src/: main.tsx
apps/tauri-client/: index.html  package.json  vite.config.ts
apps/tauri-client/src/: main.tsx
apps/tauri-client/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri-client/src-tauri/icons/: icon.icns
docs/: log-claude-code-prompts.md
scripts/: generate-icons.js
